--- a/SourceCode/2024/March2024/Abishek/Task10_Switch_13032024/Main.xaml
+++ b/SourceCode/2024/March2024/Abishek/Task10_Switch_13032024/Main.xaml
@@ -81,13 +81,14 @@
       <AssemblyReference>Microsoft.VisualBasic.Core</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="558.6666666666666,816" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Task 10&#xD;&#xA;Step 1: Add a input dialog box inorder to enter the value from 1-7&#xD;&#xA;Step 2: Add a Switch activity to print the response based on selection&#xD;&#xA;Step 3: Display the response based on input given&#xD;&#xA;" DisplayName="Switch_Task" sap:VirtualizedContainerService.HintSize="558.6666666666666,911.3333333333334" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Int32" Name="in_day" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+        <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="496.6666666666667,286" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="[&quot;Select any Number&quot; +vbNewLine+&quot;1-Sunday&quot;+vbNewLine+&quot;2-Monday&quot;+vbNewLine+&quot;3-Tuesday&quot;+vbNewLine+&quot;4-Wednesday&quot;+vbNewLine+&quot;5-Thursday&quot;+vbNewLine+&quot;6-Friday&quot;+vbNewLine+&quot;7-Saturday&quot;]" Title="Check the day">
