--- a/SourceCode/2024/March2024/sampath/task 9/Main.xaml
+++ b/SourceCode/2024/March2024/sampath/task 9/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap2010:Annotation.AnnotationText="UPTF00000088eyI8SGVscExpbms+a19fQmFja2luZ0ZpZWxkIjpudWxsLCI8SW5pdGlhbFRvb2x0aXA+a19fQmFja2luZ0ZpZWxkIjpudWxsLCI8VmVyc2lvbj5rX19CYWNraW5nRmllbGQiOjF9" sap:VirtualizedContainerService.HintSize="680,1338" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:s="clr-namespace:System;assembly=System.Private.CoreLib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap2010:Annotation.AnnotationText="UPTF00000088eyI8SGVscExpbms+a19fQmFja2luZ0ZpZWxkIjpudWxsLCI8SW5pdGlhbFRvb2x0aXA+a19fQmFja2luZ0ZpZWxkIjpudWxsLCI8VmVyc2lvbj5rX19CYWNraW5nRmllbGQiOjF9" sap:VirtualizedContainerService.HintSize="680,1323" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:s="clr-namespace:System;assembly=System.Private.CoreLib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -82,11 +82,14 @@
       <AssemblyReference>UiPath.Platform</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="task9:&#xD;&#xA;concatinate the first and last name&#xD;&#xA;step 1: use 2 input dialog boxes&#xD;&#xA;step 2: stor the values in the form of arrey&#xD;&#xA;step 3 : concanate the values in arrey&#xD;&#xA;step 4: write the result in to text file" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="496,1273" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Task 9 : Concatinate the first and last name&#xA;step 1: use 2 input dialog boxes&#xA;step 2: stor the values in the form of arrey&#xA;step 3 : concanate the values in arrey&#xA;step 4: write the result in to text file" DisplayName="Task 9 : Concatinate the first and last name" sap:VirtualizedContainerService.HintSize="496,1258" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="firstname" />
       <Variable x:TypeArguments="x:String" Name="lastname" />
       <Variable x:TypeArguments="s:String[]" Name="names" />
+      <Variable x:TypeArguments="x:String" Name="arr_firstname" />
+      <Variable x:TypeArguments="x:String" Name="arr_lastname" />
+      <Variable x:TypeArguments="x:String" Name="result" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -94,17 +97,17 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="434,279" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="enter the first name" Title="enter information">
+    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="First name" sap:VirtualizedContainerService.HintSize="434,279" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="enter the first name" Title="enter information">
       <ui:InputDialog.Result>
-        <OutArgument x:TypeArguments="x:Object">[arr_firstname]</OutArgument>
+        <OutArgument x:TypeArguments="x:String">[arr_firstname]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="434,279" sap2010:WorkflowViewState.IdRef="InputDialog_2" IsPassword="False" Label="enter last name" Title="enter information">
+    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Last name" sap:VirtualizedContainerService.HintSize="434,279" sap2010:WorkflowViewState.IdRef="InputDialog_2" IsPassword="False" Label="enter last name" Title="enter information">
       <ui:InputDialog.Result>
-        <OutArgument x:TypeArguments="x:String">[lastname]</OutArgument>
+        <OutArgument x:TypeArguments="x:String">[arr_lastname]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <Assign sap:VirtualizedContainerService.HintSize="434,122" sap2010:WorkflowViewState.IdRef="Assign_1">
+    <Assign DisplayName="Create a array called names to store first and last name" sap:VirtualizedContainerService.HintSize="434,122" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
         <OutArgument x:TypeArguments="s:String[]">[names]</OutArgument>
       </Assign.To>
@@ -112,15 +115,15 @@
         <InArgument x:TypeArguments="s:String[]">[{arr_firstname,arr_lastname}]</InArgument>
       </Assign.Value>
     </Assign>
-    <Assign sap:VirtualizedContainerService.HintSize="434,122" sap2010:WorkflowViewState.IdRef="Assign_2">
+    <Assign DisplayName="assigning first name and last name to a variable called result" sap:VirtualizedContainerService.HintSize="434,122" sap2010:WorkflowViewState.IdRef="Assign_2">
       <Assign.To>
-        <OutArgument x:TypeArguments="x:Object">[result]</OutArgument>
+        <OutArgument x:TypeArguments="x:String">[result]</OutArgument>
       </Assign.To>
       <Assign.Value>
-        <InArgument x:TypeArguments="x:Object">[names(0)+names(1)]</InArgument>
+        <InArgument x:TypeArguments="x:String">[names(0)+" "+names(1)]</InArgument>
       </Assign.Value>
     </Assign>
-    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="434,125" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[result]" />
-    <ui:WriteTextFile File="{x:Null}" DisplayName="Write Text File" FileName="result.txt" sap:VirtualizedContainerService.HintSize="434,156" sap2010:WorkflowViewState.IdRef="WriteTextFile_1" Text="[result]" />
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Display result" sap:VirtualizedContainerService.HintSize="434,125" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[result]" />
+    <ui:WriteTextFile File="{x:Null}" DisplayName="wrighting result in text file" FileName="result.txt" sap:VirtualizedContainerService.HintSize="434,156" sap2010:WorkflowViewState.IdRef="WriteTextFile_1" Text="[result]" />
   </Sequence>
 </Activity>
